fix scrollbar pushing divs

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,6 +9,7 @@ html {
 
 html, body {
 	height: 100%;
+	width: 100vw;
 }
 
 body {
